[gd_scene load_steps=5 format=3 uid="uid://e3kgc3ydtu47"]

[ext_resource type="Script" uid="uid://bw486krdkugya" path="res://ui/pages/category_edit_page/category_edit_page.gd" id="1_f6qfo"]
[ext_resource type="FontFile" uid="uid://fupb1gof1t0f" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="2_iduin"]
[ext_resource type="Script" uid="uid://mpnoxbxbwvk4" path="res://addons/fontawesome/FontAwesome.gd" id="3_2t7dy"]
[ext_resource type="FontFile" uid="uid://8j3w1e1gsnrl" path="res://themes/normal_bold.ttf" id="4_ws8gr"]

[node name="CategoryEditPage" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 75
script = ExtResource("1_f6qfo")

[node name="Stack" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleRow" type="HBoxContainer" parent="Stack"]
layout_mode = 2

[node name="PageIcon" type="Label" parent="Stack/TitleRow"]
auto_translate_mode = 2
layout_mode = 2
localize_numeral_system = false
theme_override_fonts/font = ExtResource("2_iduin")
theme_override_font_sizes/font_size = 48
text = "ïŒ„"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_2t7dy")
icon_size = 48
icon_name = "pen"
metadata/_custom_type_script = "uid://mpnoxbxbwvk4"

[node name="TitleGap" type="MarginContainer" parent="Stack/TitleRow"]
layout_mode = 2
theme_override_constants/margin_right = 36

[node name="AccountTitle" type="Label" parent="Stack/TitleRow"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ws8gr")
theme_override_font_sizes/font_size = 64
text = "Category Name"
vertical_alignment = 2
clip_text = true

[node name="TitleMargin" type="MarginContainer" parent="Stack"]
layout_mode = 2
theme_override_constants/margin_bottom = 60

[node name="NameLabel" type="Label" parent="Stack"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "CATGR_NAME_EDIT_LABEL"

[node name="NameGap" type="MarginContainer" parent="Stack"]
layout_mode = 2
theme_override_constants/margin_bottom = 40

[node name="NameEdit" type="LineEdit" parent="Stack"]
layout_mode = 2
theme_override_font_sizes/font_size = 48

[node name="NameMargin" type="MarginContainer" parent="Stack"]
layout_mode = 2
theme_override_constants/margin_bottom = 80

[node name="TypeLabel" type="Label" parent="Stack"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "CATGR_TYPE_EDIT_LABEL"

[node name="TypeGap" type="MarginContainer" parent="Stack"]
layout_mode = 2
theme_override_constants/margin_bottom = 40

[node name="TypeEdit" type="OptionButton" parent="Stack"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
selected = 0
item_count = 2
popup/item_0/text = "EXPENSE_CATGR"
popup/item_0/id = 0
popup/item_1/text = "INCOME_CATGR"
popup/item_1/id = 1

[node name="TypeMargin" type="MarginContainer" parent="Stack"]
layout_mode = 2
theme_override_constants/margin_bottom = 80

[node name="IconLabel" type="Label" parent="Stack"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "CATGR_ICON_EDIT_LABEL"

[node name="IconGap" type="MarginContainer" parent="Stack"]
layout_mode = 2
theme_override_constants/margin_bottom = 40

[node name="IconGrid" type="GridContainer" parent="Stack"]
layout_mode = 2
columns = 5

[node name="IconMargin" type="MarginContainer" parent="Stack"]
layout_mode = 2
theme_override_constants/margin_bottom = 80

[node name="SubmitMargin" type="MarginContainer" parent="Stack"]
layout_mode = 2
theme_override_constants/margin_top = 160

[node name="Submit" type="Button" parent="Stack"]
layout_mode = 2
text = "SAVE_CATEGORY"
